--- a/index.html
+++ b/index.html
@@ -19,24 +19,22 @@
 <body>
    
 
-    <!-- <iframe src="https://giphy.com/embed/l4hLUOrqfM8Maahe8" width="1900px" height="350" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/coffee-morning-cafe-l4hLUOrqfM8Maahe8">via GIPHY</a></p> -->
-
     <section class="conatiner">
         <nav class="navbar navbar-expand-lg navbar-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-              <a class="navbar-brand" id="softmeals_text_one" href="new.html">SoftMeals Cafe <i class="fas fa-coffee"></i> <span class="sr-only">Cafe</span></a>
+              <a class="navbar-brand" id="softmeals_text_one" href="index.html">SoftMeals Cafe <i class="fas fa-coffee"></i> <span class="sr-only">Cafe</span></a>
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                  <a class="nav-link" id="home"  href="#">Home <span class="sr-only">Cafe</span></a>
+                  <a class="nav-link" id="home"  href="index.html">Home <span class="sr-only">Cafe</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Menu</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
+                    <a class="nav-link" href="about.html">About Us</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
@@ -351,7 +349,7 @@
         <div class="row">
             <div class="col-md-4">
                 <ul>
-                    <li>About Us</li>
+                    <li> <a href="about.html">About Us</a>   </li>
                     <li>Our Menu</li>
                     <li>Location</li>
                 </ul>
