--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <a class="nav-link" id="home"  href="index.html">Home <span class="sr-only">Cafe</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Menu</a>
+                  <a class="nav-link" href="menu.html">Menu</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About Us</a>
@@ -350,7 +350,7 @@
             <div class="col-md-4">
                 <ul>
                     <li> <a href="about.html">About Us</a>   </li>
-                    <li>Our Menu</li>
+                    <li><a href="menu.html"></a>Our Menu</li>
                     <li>Location</li>
                 </ul>
             </div>
@@ -365,9 +365,9 @@
 
                 <ul>
                     <li> <i class="fa fa-facebook-square"></i>  facebook</li>
-                    <li> <i class="fa fa-twitter-square"></i>twitter</li>
-                    <li><i class="fa fa-instagram"></i>instagram</li>
-                    <li><i class="fa fa-youtube"></i>youtube</li>
+                    <li> <i class="fa fa-twitter-square"></i> twitter</li>
+                    <li><i class="fa fa-instagram"></i>  instagram</li>
+                    <li><i class="fa fa-youtube-play"></i> youtube</li>
                 </ul>
             </div>
         </div>
