--- a/menu.html
+++ b/menu.html
@@ -40,13 +40,13 @@
                   <a class="nav-link" href="menu.html">Menu</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
+                    <a class="nav-link" href="about.html">About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Disabled</a>
+                  <!-- <a class="nav-link" href="#">Disabled</a> -->
                 </li>
               </ul>
               <!-- <form class="form-inline my-2 my-lg-0">
@@ -405,10 +405,10 @@
         <div class="row">
             <div class="col-md-4">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    
                     <li><a href="about.html">About Us</a></li>
-                    <li> <a href="menu.html"></a>Our Menu</li>
-                    <li>Location</li>
+                    <li> <a href="menu.html">Menu</a></li>
+                    <li> <a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="col-md-4">
